src/objects/Date_for_Delete_Interface_Log__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting Only Work When Record Name Called &quot;Delete Interface Log&quot;</description>
    <fields>
        <fullName>ActiveStartEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveStartEndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysBefore__c</fullName>
        <description>Delete How many days before</description>
        <label>DaysBefore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessedBatch__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProcessedBatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQL_Limit__c</fullName>
        <description>Limit the records per deletion</description>
        <label>SQL_Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToEmail__c</fullName>
        <description>Email address of who monitor this job</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ToEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Date for Delete Interface Log</label>
</CustomObject>